--- a/common/scss/common.scss
+++ b/common/scss/common.scss
@@ -2255,7 +2255,7 @@
     }
 }
 
-.sc_check {
+.sc_checkbox {
     display: inline-block;
     position: relative;
     input[type="checkbox"] {
@@ -2441,7 +2441,22 @@
 
 
 
-
+.sep_bar {
+    display: block;
+    margin: 0;
+    width: 100%;
+    height: 10px;
+    border: none;
+    border-top: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
+    background-color: #f5f5f5;
+    box-sizing: border-box;
+    &.ty_hoz {
+        width: auto;
+        margin-left: -20px;
+        margin-right: -20px;
+    }
+}
 
 
 
