--- a/common/css/pp_common.css
+++ b/common/css/pp_common.css
@@ -68,7 +68,7 @@
 
 .nav_all_top .member_box_img { display: block; position: relative; width: 120px; height: 120px; margin: 0 auto; border: 4px solid #f6c34b; -webkit-box-sizing: border-box; box-sizing: border-box; border-radius: 20px; overflow: hidden; background-image: url(../../images/nav_all/member_normal.svg); background-position: center 13px; background-size: contain; background-color: #fff; background-repeat: no-repeat; overflow: hidden; }
 
-.nav_all_top .member_box_img img { width: 100%; height: 100%; -o-object-fit: cover; object-fit: cover; -o-object-position: 50% 0; object-position: 50% 0; }
+.nav_all_top .member_box_img img { width: 100%; height: 100%; -o-object-fit: cover; object-fit: cover; }
 
 .nav_all_top .member_box_img.ty_pp_member::before { content: ''; position: absolute; width: 38px; height: 24px; background-image: url(../../images/nav_all/pp_logo.svg); background-repeat: no-repeat; background-size: cover; left: 50%; bottom: 9px; margin-left: -19px; }
 
