--- a/common/css/common.css
+++ b/common/css/common.css
@@ -6,6 +6,10 @@
 /* 컬러 */
 .con_list_item { padding: 60px 0 59px; text-align: center; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; background-repeat: repeat-x; background-position: center center; }
 
+.con_list_item .lottie_box .lottie_player { width: 100%; height: auto; }
+
+.con_list_item::before { content: ''; position: absolute; width: 100%; height: 100vh; top: 100%; }
+
 .con_list_item .svg_box { max-width: 100%; width: 1160px; position: relative; }
 
 .con_list_item .svg_box_inner { padding-top: 62.0689%; position: relative; }
@@ -14,21 +18,23 @@
 
 .con_list_item svg { max-width: 100%; }
 
-.con_list_item1 { background-image: url(../../images/main/main_bg1.png); }
+.con_list_item1 { background-color: #8780bc; }
+
+.con_list_item1::before { background-color: #8780bc; }
 
 .con_list_item1 .link01 .lottie_player { width: 100%; height: auto; }
 
-.con_list_item1 .link01_wrap { width: 386px; height: 331px; -webkit-transform: translate(661px, 340px); transform: translate(661px, 340px); }
+.con_list_item1 .link01_wrap { width: 400px; height: 340px; -webkit-transform: translate(630px, 340px); transform: translate(630px, 340px); }
 
-.con_list_item1 .main_story_list_wrap { width: 328px; height: 300px; -webkit-transform: translate(457px, 101px); transform: translate(457px, 101px); }
+.con_list_item1 .main_story_list_wrap { width: 320px; height: 300px; -webkit-transform: translate(431px, 119px); transform: translate(431px, 119px); }
 
 .con_list_item1 .main_story_list { display: -webkit-box; display: -ms-flexbox; display: flex; text-align: left; }
 
 .con_list_item1 .main_story_list_item { width: 50%; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-.con_list_item1 .main_story_list_item:nth-child(odd) { padding-right: 30px; }
+.con_list_item1 .main_story_list_item:nth-child(odd) { padding-right: 32px; }
 
-.con_list_item1 .main_story_list_item:nth-child(even) { padding-left: 30px; }
+.con_list_item1 .main_story_list_item:nth-child(even) { padding-left: 32px; }
 
 .con_list_item1 .main_story_list_link { display: block; padding-top: 5px; }
 
@@ -38,13 +44,17 @@
 
 .con_list_item1 .main_story_list .sc_tag { position: absolute; left: 0; top: -5px; z-index: 10; }
 
-.con_list_item2 { background-image: url(../../images/main/main_bg2.png); }
+.con_list_item2 { background-color: #ee869d; }
 
-.con_list_item2 .lottie_player { position: absolute; width: 31%; left: 5%; bottom: 29%; height: auto; }
+.con_list_item2::before { background-color: #ee869d; }
 
 .con_list_item2 .img_item { position: absolute; width: 15.8%; left: 22.5%; bottom: 6.5%; }
 
-.con_list_item2 .discussion_wrap { -webkit-transform: translate(925px, 470px); transform: translate(925px, 470px); }
+.con_list_item2 .lottie_box { width: 376px; height: 391px; -webkit-transform: translate(124px, 174px); transform: translate(124px, 174px); }
+
+.con_list_item2 .lottie_box .lottie_player { width: 100%; height: auto; }
+
+.con_list_item2 .discussion_wrap { -webkit-transform: translate(885px, 494px); transform: translate(885px, 494px); }
 
 .con_list_item2 .discussion_box_tit { font-size: 22px; line-height: 1; font-family: 'Godo'; font-weight: bold; }
 
@@ -60,9 +70,51 @@
 
 .con_list_item2 .discussion_box_result_item span { font-weight: 500; }
 
-.con_list_item3 { background-image: url(../../images/main/main_bg3.png); }
+.con_list_item3 { background-color: #55c1dd; }
 
-.con_list_item4 { background-image: url(../../images/main/main_bg4.png); }
+.con_list_item3::before { background-color: #55c1dd; }
+
+.con_list_item3 .lottie_box { width: 370px; height: 391px; -webkit-transform: translate(701px, 358px); transform: translate(701px, 358px); }
+
+.con_list_item3 .lottie_box .lottie_player { width: 100%; height: auto; }
+
+.con_list_item4 { background-color: #73b77e; }
+
+.con_list_item4::before { background-color: #73b77e; }
+
+.con_list_item4 .lottie_box1 { width: 360px; height: 360px; -webkit-transform: translate(41px, 149px); transform: translate(41px, 149px); }
+
+.con_list_item4 .lottie_box2 { width: 360px; height: 360px; -webkit-transform: translate(335px, 149px); transform: translate(335px, 149px); }
+
+.main_wrap { overflow: hidden; }
+
+.main_bot { padding-bottom: 160px; position: relative; z-index: 10; }
+
+.main_board { display: -webkit-box; display: -ms-flexbox; display: flex; }
+
+.main_board_sec { width: 50%; -webkit-box-flex: 1; -ms-flex: 1; flex: 1; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+.main_board_notice { padding-right: 20px; }
+
+.main_board_community { padding-left: 20px; }
+
+.main_board_inner { background-color: #fff; border-radius: 12px; border: 3px solid #000; padding: 20px; }
+
+.main_board .tit_area { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: end; -ms-flex-align: end; align-items: flex-end; margin-bottom: 10px; }
+
+.main_board .tit_area .tit { font-size: 22px; line-height: 1.18; letter-spacing: -0.22px; color: #212121; }
+
+.main_board .tit_area .btn_vm { font-size: 13px; line-height: 1.4; position: relative; padding-left: 14px; }
+
+.main_board .tit_area .btn_vm::before { content: ''; position: absolute; width: 9px; height: 1px; background-color: #424242; left: 0; top: 50%; margin-top: -0.5px; }
+
+.main_board .tit_area .btn_vm::after { content: ''; position: absolute; width: 1px; height: 9px; background-color: #424242; left: 4px; top: 50%; margin-top: -4.5px; }
+
+.main_board .main_list li + li { margin-top: 5px; }
+
+.main_board .main_list li a { padding-left: 10px; position: relative; display: block; font-size: 14px; line-height: 20px; color: #666; }
+
+.main_board .main_list li a::before { content: '·'; position: absolute; left: 0; top: 0; }
 
 @media (max-width: 1920px) { .con_list_item { background-size: cover; } }
 
